--- a/app/src/main/res/layout/activity_operacao.xml
+++ b/app/src/main/res/layout/activity_operacao.xml
@@ -45,20 +45,24 @@
         <LinearLayout
             android:background="@color/black"
             android:orientation="vertical"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
         <TextView
             android:text="Speed"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="0dp"/>
             <EditText
+                android:textColor="@color/white"
                 android:inputType="number"
                 android:text="123"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="0dp"/>
             <TextView
+                android:textColor="@color/white"
                 android:text="mpm"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
@@ -79,6 +83,7 @@
                 >
                 <TextView
                     android:textStyle="bold"
+                    android:textColor="@color/white"
                     android:text="Produção Máquina"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -86,17 +91,20 @@
             </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_weight="1"
+                    android:layout_height="0dp">
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content">
                     <TextView
+                        android:textColor="@color/white"
                         android:text="Desejado(mts)"
                         android:layout_width="wrap_content"
                         android:textSize="8sp"
                         android:layout_height="wrap_content"/>
                     <EditText
+                        android:textColor="@color/white"
                         android:inputType="number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -108,11 +116,13 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content">
                     <TextView
+                        android:textColor="@color/white"
                         android:text="Atual(mts)"
                         android:textSize="8sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                     <EditText
+                        android:textColor="@color/white"
                         android:inputType="number"
                         android:layout_width="wrap_content"
                         android:textSize="8sp"
@@ -121,24 +131,27 @@
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
-
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_weight="1"
+                    android:layout_height="0dp">
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:textColor="@color/white"
                             android:text="Desejado(mts)"
                             android:layout_width="wrap_content"
                             android:textSize="8sp"
                             android:layout_height="wrap_content"/>
+
                         <EditText
-                            android:inputType="number"
                             android:layout_width="wrap_content"
+                            android:textColor="@color/white"
                             android:layout_height="wrap_content"
-                            android:textSize="8sp"
-                            android:text="123"/>
+                            android:inputType="number"
+                            android:text="123"
+                            android:textSize="8sp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
@@ -146,11 +159,13 @@
                         android:layout_height="wrap_content">
                         <TextView
                             android:textSize="8sp"
+                            android:textColor="@color/white"
                             android:text="Atual(mts)"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
                         <EditText
                             android:layout_width="wrap_content"
+                            android:textColor="@color/white"
                             android:inputType="number"
                             android:layout_height="wrap_content"
                             android:textSize="8sp"
@@ -186,6 +201,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Torque:(0-100%)"/>
@@ -193,6 +209,7 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"/>
             <TextView
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Torque:(0-100%)"/>
